Fix Buttons on Mobile

--- a/style-book.css
+++ b/style-book.css
@@ -2948,7 +2948,7 @@ body.lang-ka #digital-library-root .chapter-list li.toc-h1 span:not(.toc-arrow) 
 /* --- BOTTOM CONTROLS --- */
 #digital-library-root .sidebar-controls {
     position: absolute !important;
-    bottom: 0 !important;
+    bottom: 20px !important;
     left: 0 !important;
     width: 100% !important;
     padding: 15px 20px !important;
@@ -3984,6 +3984,9 @@ body.light-mode .lang-portal-btn:hover {
     .lang-portal-btn {
         width: 38px !important;
         height: 38px !important;
+    }
+    #digital-library-root .sidebar-controls{
+        bottom: 60px!important;
     }
 }
 
